# Semiring_graph_algorithm

./: Makefile  README.md  _CoqProject  dune  dune-project
algorithm/: Definitions.v  Listprop.v  Mat.v  Orel.v  Path.v  dune  wrapper.v
examples/: Schulze.v  Shortestpath.v  WidestShortestPath.v  Wikimedia.v  dune
executable/schulzecode/: dune  main.ml
executable/shortestpath/: dune  main.ml
executable/widestpathcode/: dune  main.ml
executable/wikimedia/: dune  main.ml
extraction/: Extraction.v  dune
extraction/schulze/: Extraction.v
extraction/shortestpath/: Extraction.v
extraction/widestshortestpath/: Extraction.v
extraction/wikimedia/: Extraction.v
paper/CAV2024/: paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.tex  ref.bib
