(subdir schulze
 (coq.extraction
  (prelude Extraction)
  (extracted_modules BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif Schulze)
  (theories Semiring Examples))
  (library 
    (name schulze)))

(subdir widestshortestpath
 (coq.extraction
  (prelude Extraction)
  (extracted_modules BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif WidestShortestPath)
  (theories Semiring Examples))
  (library
    (name widestshortestpath)))


(subdir shortestpath
 (coq.extraction
  (prelude Extraction)
  (extracted_modules BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif ShortestPath)
  (theories Semiring Examples))
  (library
    (name shortestpath)))


(subdir wikimedia
 (coq.extraction
  (prelude Extraction)
  (extracted_modules BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif Wikimedia)
  (theories Semiring Examples))
  (library
    (name wikimedia)))