(subdir schulze
 (coq.extraction
  (prelude Extraction)
  (extracted_modules ListDef BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif Schulze)
  (theories Stdlib Semiring Examples))
  (library 
    (name schulze)))

(subdir widestshortestpath
 (coq.extraction
  (prelude Extraction)
  (extracted_modules ListDef BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif WidestShortestPath)
  (theories Stdlib Semiring Examples))
  (library
    (name widestshortestpath)))


(subdir shortestpath
 (coq.extraction
  (prelude Extraction)
  (extracted_modules ListDef BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif ShortestPath)
  (theories Stdlib Semiring Examples))
  (library
    (name shortestpath)))


(subdir wikimedia
 (coq.extraction
  (prelude Extraction)
  (extracted_modules ListDef BinNums Datatypes Decimal Definitions Hexadecimal List Listprop Logic Mat Nat Number Path Specif Wikimedia)
  (theories Stdlib Semiring Examples))
  (library
    (name wikimedia)))